"Fix" "Will-change memory consumption is too high." in Firefox

--- a/app/static/css/calendar.css
+++ b/app/static/css/calendar.css
@@ -57,7 +57,6 @@
   width: 20rem;
   max-width: 90vw;
   transform-origin: top center;
-  will-change: opacity, transform;
 
   color: var(--color-text);
   backdrop-filter: blur(10px) saturate(140%);
@@ -228,4 +227,9 @@
       &:hover { opacity: 1 !important; }
     }
   }
+}
+
+#calendar.pop-enter,
+#calendar.pop-exit {
+  will-change: opacity, transform;
 }
